<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context="com.synnefx.cqms.event.ui.drugreaction.DrugReactionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    float:fletPadding="2dp">
                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/incident_units"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_height"
                        android:layout_marginTop="@dimen/edit_margin"
                        android:hint="@string/event_unit" />
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>


            </LinearLayout>

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                float:fletPadding="2dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/consultant_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_height"
                    android:completionThreshold="1"
                    android:hint="@string/consulant_name"
                    android:imeOptions="actionNext|flagNoExtractUi"
                    android:inputType="textPersonName" />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>



            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_margin"
                float:fletPadding="5dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/patient_diagnosis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"
                    android:hint="@string/patient_diagnosis"
                    android:imeOptions="actionNext|flagNoExtractUi"
                    android:inputType="textMultiLine"
                    android:maxLength="1000"
                    android:minLines="6"
                    float:met_maxCharacters="1000" />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="0.75"
                    float:fletPadding="2dp">
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/event_time"
                        android:completionThreshold="1"
                        android:layout_width="match_parent"
                        android:layout_weight="0.75"
                        android:editable="false"
                        android:focusable="false"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext|flagNoExtractUi"
                        android:inputType="none"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="@dimen/edit_margin"
                        android:hint="@string/event_time"/>
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>


                <com.rey.material.widget.Button
                    android:id="@+id/event_time_btn"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/bt_height"
                    android:layout_weight="0.25"
                    android:layout_gravity="center_vertical"
                    android:text="Change"
                    android:textColor="#fff"
                    android:layout_marginTop="@dimen/edit_margin"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/date_btn_bg"
                    />
            </LinearLayout>

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_margin"
                float:fletPadding="5dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"
                    android:hint="@string/incident_description"
                    android:imeOptions="actionNext|flagNoExtractUi"
                    android:inputType="textMultiLine"
                    android:maxLength="1000"
                    android:minLines="6"
                    float:met_maxCharacters="1000" />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <Button
                android:id="@+id/incident_details_save"
                style="@style/ShadowText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/incident_details_save"
                android:textColor="#fff"
                android:textSize="18dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>


